force-app/main/default/objects/ObservabilitySpans__dll/ObservabilitySpans__dll.object-meta.xml
<CustomObject>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Observability_Table</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>