force-app/main/default/objects/ObservabilitySpans__dll/fields/durationNanos__c.field-meta.xml
<CustomField>
    <fullName>durationNanos__c</fullName>
    <label>durationNanos</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>durationNanos</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>