force-app/main/default/objects/ObservabilitySpans__dll/fields/endDateTime__c.field-meta.xml
<CustomField>
    <fullName>endDateTime__c</fullName>
    <label>endDateTime</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>endDateTime</externalName>
        <isEventDate>true</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>