force-app/main/default/objects/ObservabilitySpans__dll/fields/parentSpanId__c.field-meta.xml
<CustomField>
    <fullName>parentSpanId__c</fullName>
    <label>parentSpanId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>parentSpanId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>