force-app/main/default/objects/ObservabilitySpans__dll/fields/serviceName__c.field-meta.xml
<CustomField>
    <fullName>serviceName__c</fullName>
    <label>serviceName</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>serviceName</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>