force-app/main/default/objects/ObservabilitySpans__dll/fields/spanId__c.field-meta.xml
<CustomField>
    <fullName>spanId__c</fullName>
    <label>spanId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>spanId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>true</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>