force-app/main/default/objects/ObservabilitySpans__dll/fields/startDateTime__c.field-meta.xml
<CustomField>
    <fullName>startDateTime__c</fullName>
    <label>startDateTime</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>startDateTime</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>