force-app/main/default/objects/ObservabilitySpans__dll/fields/statusCode__c.field-meta.xml
<CustomField>
    <fullName>statusCode__c</fullName>
    <label>statusCode</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>statusCode</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>